fix title size on small screens, remove default 2nd title/subtitle

--- a/wp-content/themes/martha/style.css
+++ b/wp-content/themes/martha/style.css
@@ -3627,6 +3627,12 @@ Panels
 		.text-slider {
 			margin-bottom: 0;
 		}
+		.text-slider .maintitle {
+			font-size: 30px;
+		}
+		.text-slider .subtitle {
+			font-size: 30px;
+		}
 		.martha-run-logo {
 			width: 260px !important;
   	}
